@@ -45,6 +45,10 @@ install: build
 	dh_install build/apache-cassandra-thrift-$(VERSION).jar \
 		usr/share/cassandra
 
+	# Copy stress jar
+	dh_install build/tools/lib/stress.jar \
+		usr/share/cassandra
+
 	dh_link usr/share/cassandra/apache-cassandra-$(VERSION).jar \
 		usr/share/cassandra/apache-cassandra.jar
 
